# lms

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  project.md
apps/api/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
apps/api/library_api/: config.py  db.py  fine_policy.py  migrate.py  repositories.py  server.py  service.py
apps/api/tests/integration/: test_db_constraints.py  test_repository_integration.py
apps/api/tests/unit/: test_fine_policy.py
apps/web/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: actions.test.ts  actions.ts  layout.tsx  page.tsx
apps/web/app/_components/: dashboardShell.tsx
apps/web/app/books/: page.tsx
apps/web/app/borrow/: page.tsx
apps/web/app/members/: page.tsx
apps/web/lib/: dashboardData.ts  grpcClient.ts  mappers.integration.test.ts  mappers.ts  mappers.unit.test.ts  types.ts
docs/: architecture.md
infra/docker/: docker-compose.yml
